--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<a href="https://h2oco2.github.io/technology">银河科技官网</a>
 				</li>
 				<li class="btn btn-primary btn-lg">
-					<a href="https://h2oco2.github.io/guoshu">国术教学网站</a>
+					<a href="https://h2oco2.github.io/GitCommand">Git命令</a>
 				</li>
 				<li class="btn btn-primary btn-lg">
 					<a href="https://h2oco2.github.io/technology">银河科技官网</a>
