--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			h1 {
 				text-align: center;
 				font-weight: normal;
-				font-size: 30px;
+				font-size: 5rem;
 			}
 			
 			.ah{
@@ -19,6 +19,7 @@
 				height: 10rem;
 				line-height: 10rem!important;
 				margin-bottom: 2rem;
+				font-size: 3rem;
 			}
 			.mt10{
 				margin-top:10px;
