--- a/GitCommand/index.html
+++ b/GitCommand/index.html
@@ -13,7 +13,7 @@
 		<h1 class="container">
 			<div class="row">
 				<div class="col-md-9">
-					Git 命令总结(<span class="red fs18 ib">* 看不懂的用红色标记</span>)
+					Git 命令总结
 				</div>
 			</div>
 		</h1>
